{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 174,
  "lineage": "9e4f019a-3095-58bf-7039-a17e7abe404f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0767046d1677be5a0",
            "arn": "arn:aws:ec2:eu-central-1:379554952246:instance/i-05103eaf3877af939",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05103eaf3877af939",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EndavaHomework",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08462dce8b56d8cd0",
            "private_dns": "ip-10-0-0-238.eu-central-1.compute.internal",
            "private_ip": "10.0.0.238",
            "public_ip": "3.120.249.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5baa1fc68c5793e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8253f281b1074e2",
            "tags": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a64269ee5d353d6f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnet-WebServer",
            "aws_vpc.Webserver-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379554952246:internet-gateway/igw-01a78319e0389eba1",
            "id": "igw-01a78319e0389eba1",
            "owner_id": "379554952246",
            "vpc_id": "vpc-04bc498c6783ea80c"
          },
          "dependencies": [
            "aws_vpc.Webserver-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webser-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379554952246:route-table/rtb-075ca6f743c2772be",
            "id": "rtb-075ca6f743c2772be",
            "owner_id": "379554952246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a78319e0389eba1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebServer"
            },
            "vpc_id": "vpc-04bc498c6783ea80c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Webserver-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bca63a8418f0bfa",
            "route_table_id": "rtb-075ca6f743c2772be",
            "subnet_id": "subnet-0f8253f281b1074e2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.webser-route-table",
            "aws_subnet.subnet-WebServer",
            "aws_vpc.Webserver-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379554952246:security-group/sg-0a64269ee5d353d6f",
            "description": "Allows HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a64269ee5d353d6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "379554952246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_SSH_HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bc498c6783ea80c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Webserver-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379554952246:subnet/subnet-0f8253f281b1074e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f8253f281b1074e2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "379554952246",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "vpc_id": "vpc-04bc498c6783ea80c"
          },
          "dependencies": [
            "aws_vpc.Webserver-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Webserver-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379554952246:vpc/vpc-04bc498c6783ea80c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b489a57fed7823a",
            "default_route_table_id": "rtb-050d33b51ceb12fba",
            "default_security_group_id": "sg-0ad10023a6f3f35fd",
            "dhcp_options_id": "dopt-da6ce1b0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04bc498c6783ea80c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050d33b51ceb12fba",
            "owner_id": "379554952246",
            "tags": {
              "Name": "Webserver"
            },
            "tags_all": {
              "Name": "Webserver"
            }
          }
        }
      ]
    }
  ]
}